Bug 286803 - KNode crashed after posting pending message
Summary: KNode crashed after posting pending message
Status: RESOLVED FIXED
Alias: None
Product: knode
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 296720 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-11-16 21:20 UTC by John Phillips
Modified: 2012-12-22 16:21 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description John Phillips 2011-11-16 21:20:53 UTC
Application: knode (4.7.2)
KDE Platform Version: 4.7.2 (4.7.2)
Qt Version: 4.7.4
Operating System: Linux 3.0.0-13-generic-pae i686
Distribution: Ubuntu 11.10

-- Information about the crash:
- What I was doing when the application crashed:  Posted pending message from KNode (which appears to have been posted ok), at the same time using Ubuntu Software Centre to download a programme.

Using Lubuntu, LXDE desktop

-- Backtrace:
Application: KNode (knode), signal: Segmentation fault
[KCrash Handler]
#7  0xb7443dfd in size (this=0x2c) at /usr/include/qt4/QtCore/qlist.h:94
#8  size (this=0x2c) at /usr/include/qt4/QtCore/qlist.h:124
#9  size (this=0x24) at ../../knode/knarticlecollection.h:38
#10 length (this=0x0) at ../../knode/knarticlecollection.h:95
#11 KNArticleFilter::doFilter (this=0x97611d0, f=...) at ../../knode/knarticlefilter.cpp:297
#12 0xb73fc9b0 in KNArticleManager::showHdrs (this=0x9760130, clear=false) at ../../knode/knarticlemanager.cpp:306
#13 0xb73cc3d8 in KNGroupManager::processJob (this=0x9760270, j=0xb5b7e40) at ../../knode/kngroupmanager.cpp:654
#14 0xb73b7c55 in KNJobConsumer::jobDone (this=0x9760278, j=0xb5b7e40) at ../../knode/knjobdata.cpp:54
#15 0xb73b7caa in KNJobData::notifyConsumer (this=0xb5b7e40) at ../../knode/knjobdata.cpp:100
#16 0xb73b52a3 in KNode::Scheduler::slotJobFinished (this=0x96d3090, job=0xb5b7e40) at ../../knode/scheduler.cpp:202
#17 0xb73b6315 in KNode::Scheduler::qt_metacall (this=0x96d3090, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0xbfbb91a8) at ./scheduler.moc:81
#18 0xb604eb7d in metacall (argv=0xbfbb91a8, idx=5, cl=QMetaObject::InvokeMetaMethod, object=0x96d3090) at kernel/qmetaobject.cpp:237
#19 QMetaObject::metacall (object=0x96d3090, cl=QMetaObject::InvokeMetaMethod, idx=5, argv=0xbfbb91a8) at kernel/qmetaobject.cpp:232
#20 0xb605da6a in QMetaObject::activate (sender=0xb5b7e40, m=0xb750f89c, local_signal_index=0, argv=0xbfbb91a8) at kernel/qobject.cpp:3278
#21 0xb73b78a5 in KNJobData::finished (this=0xb5b7e40, _t1=0xb5b7e40) at ./knjobdata.moc:95
#22 0xb73b78c3 in KNJobData::slotEmitFinished (this=0xb5b7e40) at ../../knode/knjobdata.cpp:182
#23 0xb73b7943 in KNJobData::qt_metacall (this=0xb5b7e40, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0xb827fd0) at ./knjobdata.moc:83
#24 0xb73bbe12 in KNode::ArticleListJob::qt_metacall (this=0xb5b7e40, _c=QMetaObject::InvokeMetaMethod, _id=7, _a=0xb827fd0) at ./nntpjobs.moc:133
#25 0xb604eb7d in metacall (argv=0xb827fd0, idx=7, cl=QMetaObject::InvokeMetaMethod, object=0xb5b7e40) at kernel/qmetaobject.cpp:237
#26 QMetaObject::metacall (object=0xb5b7e40, cl=QMetaObject::InvokeMetaMethod, idx=7, argv=0xb827fd0) at kernel/qmetaobject.cpp:232
#27 0xb6059685 in QMetaCallEvent::placeMetaCall (this=0xbe97c10, object=0xb5b7e40) at kernel/qobject.cpp:535
#28 0xb6060b52 in QObject::event (this=0xb5b7e40, e=0xbe97c10) at kernel/qobject.cpp:1217
#29 0xb62dbd54 in notify_helper (e=0xbe97c10, receiver=0xb5b7e40, this=0x94de670) at kernel/qapplication.cpp:4486
#30 QApplicationPrivate::notify_helper (this=0x94de670, receiver=0xb5b7e40, e=0xbe97c10) at kernel/qapplication.cpp:4458
#31 0xb62e1103 in QApplication::notify (this=0xbe97c10, receiver=0xb5b7e40, e=0xbe97c10) at kernel/qapplication.cpp:3886
#32 0xb6e31681 in KApplication::notify (this=0xbfbb9914, receiver=0xb5b7e40, event=0xbe97c10) at ../../kdeui/kernel/kapplication.cpp:311
#33 0xb604819e in QCoreApplication::notifyInternal (this=0xbfbb9914, receiver=0xb5b7e40, event=0xbe97c10) at kernel/qcoreapplication.cpp:787
#34 0xb604bf93 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#35 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x94b5540) at kernel/qcoreapplication.cpp:1428
#36 0xb604c0ec in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1321
#37 0xb60766a4 in sendPostedEvents () at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:220
#38 postEventSourceDispatch (s=0x94e1690) at kernel/qeventdispatcher_glib.cpp:277
#39 0xb420f25f in g_main_context_dispatch () from /lib/i386-linux-gnu/libglib-2.0.so.0
#40 0xb420f990 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#41 0xb420fc2a in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#42 0xb6076ada in QEventDispatcherGlib::processEvents (this=0x94b6250, flags=...) at kernel/qeventdispatcher_glib.cpp:422
#43 0xb6393e3a in QGuiEventDispatcherGlib::processEvents (this=0x94b6250, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#44 0xb60471dd in QEventLoop::processEvents (this=0xbfbb98a4, flags=...) at kernel/qeventloop.cpp:149
#45 0xb6047421 in QEventLoop::exec (this=0xbfbb98a4, flags=...) at kernel/qeventloop.cpp:201
#46 0xb604c19d in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1064
#47 0xb62d98f4 in QApplication::exec () at kernel/qapplication.cpp:3760
#48 0x0804cc8d in main (argc=) at ../../knode/main.cpp:46

Reported using DrKonqi
Comment 1 Jekyll Wu 2012-07-03 21:09:25 UTC
*** Bug 296720 has been marked as a duplicate of this bug. ***
Comment 2 Allen Winter 2012-12-22 16:21:19 UTC
Git commit 374a94b55a5b47f6f411516700b5b2122e2e62dd by Allen Winter.
Committed on 22/12/2012 at 17:19.
Pushed by winterz into branch 'KDE/4.9'.

in showHdrs(), consider the case where f_older is 0.
prevents a crash.
FIXED-IN: 4.9.5
MERGE: 4.10, master

M  +1    -1    knode/knarticlemanager.cpp

http://commits.kde.org/kdepim/374a94b55a5b47f6f411516700b5b2122e2e62dd