in showHdrs(), consider the case where f_older is 0. prevents a crash.

BUG: 286803
FIXED-IN: 4.9.5
MERGE: 4.10, master